// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RequestsBanner /> Rendering renders correctly 1`] = `
<aside
  className="RequestsBanner "
>
  <p
    className="RequestsBanner__msg"
  >
    You have an incomplete Work Pass Request from 
    Applied Blockchain
    . Please use the APPII mobile app to complete it.
  </p>
</aside>
`;

exports[`<RequestsBanner /> Rendering renders correctly for 2 requests 1`] = `
<aside
  className="RequestsBanner "
>
  <p
    className="RequestsBanner__msg"
  >
    You have 
    <b>
      2
       incomplete Work Pass Requests
    </b>
    . Please use the APPII mobile app to complete them.
  </p>
</aside>
`;
